--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         <p>&copy; Copyright 2020 Immanuel353 design</p>
       </div>
       
-      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6">
+      <div class="col-lg-6 col-md-6 col-sm-6 col-xs-6 social-link">
         <ul>
           <li><i class="fa fa-facebook"></i>Facebook</li>
           <li><i class="fa fa-instagram"></i>Instagram</li>
